--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 600px;
+    max-width: 550px;
     margin: 0 auto;
     background-color: hsl(226, 59%, 85%);
 }
@@ -33,14 +33,14 @@ h1{
     font-weight: 800;
     font-style: italic;
     color: #bf6e83c7;
-    margin: 10px 20px;
+    margin: 80px 0px 5px 0px;
 }
 
 button {
     background-color: #a39da2ad; 
     color: rgb(249, 245, 245); 
     padding: 5px 10px; 
-    margin: 10px 20px;
+    margin: 15px 0px;
     border: none;
     border-radius: 8px; 
     font-size: 15px; 
